--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,18 @@
 // Colors
 
+$navbar-text-color:     #696969 !default;
 
 // Fonts
+$base-font:             "Nunito", sans-serif;
 
+$font-weight-light:     300 !default;
 
+$title-font-size:       2rem !default;
+$nav-link-font-size:    1rem !default;
 
 // Formatting
 
-
+$nav-padding:           6rem 5rem !default;
+$nav-padding-sm:        1rem 0 !default;
 
 // Accordian
