--- a/src/scss/utilities/_media.scss
+++ b/src/scss/utilities/_media.scss
@@ -1,5 +1,5 @@
 // Small
-@media (max-width: 576px) {
+@media (min-width: 576px) {
 
 }
 
@@ -15,7 +15,9 @@
 
 // Large
 @media (min-width: 992px) {
-
+  navbar {
+    padding: $nav-padding;
+  }
 }
 
 // X-Large
