Horizontal scroll bg added

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$navbar-text-color:     #696969 !default;
+$navbar-text-color:     #d9a7c7 !default;
 
 // Fonts
 $base-font:             "Nunito", sans-serif;
@@ -14,5 +14,8 @@ $nav-link-font-size:    1rem !default;
 
 $nav-padding:           6rem 5rem !default;
 $nav-padding-sm:        1rem 0 !default;
+
+$about-padding:         0 !default;
+$about-height:          30rem !default;
 
 // Accordian
