Cleaned it up a bit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-jenn-navbar></app-jenn-navbar>
 <div class="container-fluid">
-  <app-jenn-about></app-jenn-about>
+  <router-outlet></router-outlet>
 </div>
