--- a/src/app/jenn-navbar/jenn-navbar.component.html
+++ b/src/app/jenn-navbar/jenn-navbar.component.html
@@ -1,9 +1,9 @@
-<navbar SideClass="navbar navbar-toggleable-md light white z-depth-0">
+<navbar SideClass="container navbar navbar-toggleable-md navbar-light z-depth-0 fixed-top">
     <logo><a class="logo navbar-brand" href="#">{{title}}</a></logo>
     <links>
         <ul class="navbar-nav mr-auto">
           <li *ngFor="let page of pages" class="nav-item">
-            <a class="nav-link">{{page.name}}</a>
+            <a class="nav-link" routerLink={{page.link}} routerLinkActive="active">{{page.name}}</a>
           </li>
         </ul>
     </links>
