cleaned stuff up to focus on content

--- a/src/app/jenn-about/jenn-about.component.html
+++ b/src/app/jenn-about/jenn-about.component.html
@@ -1,3 +1,5 @@
 <div class="container-fluid z-depth-0">
-  <app-jenn-about-content></app-jenn-about-content>
+  <div class="row-1-lg">
+    <app-jenn-about-me></app-jenn-about-me>
+  </div>
 </div>
