--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,6 +26,9 @@ $nav-link-font-size:    1rem !default;
 $nav-top-padding:       .25rem !default;
 $nav-left-padding:      0 !default;
 
+$body-top-margin-sm:    2rem !default;
+$body-top-margin-lg:    6rem !default;
+
 $about-padding:         0 !default;
 $about-height:          31rem !default;
 $about-margin:          6rem !default;
