Added some about me content

--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -1,3 +1,77 @@
-<p>
-  jenn-about-me works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-right">me</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <h2 class="text-left">Contact</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">[Add links/social icons here]</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <h2 class="text-left">Education</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <h3 class="text-left">Southern Methodist University</h3>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">Bobby B. Lyle School of Engineering</p>
+    </div>
+    <div class="col">
+      <p class="text-right">Expected Graduation: May 2019</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">Bachelor of Science in Computer Science</p>
+    </div>
+    <div class="col">
+      <p class="text-right">GPA: 3.56</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">Data Intensive Computing Track</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">Master of Science in Computer Science</p>
+    </div>
+    <div class="col">
+      <p class="text-right">Expected Graduation: May 2019</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p class="text-left">Data Science Concentration</p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <h2 class="text-left">Things I Like</h2>
+    </div>
+  </div>
+
+</div>
