closes #9 - Horizontal scrolling

--- a/src/app/jenn-about/jenn-about.component.html
+++ b/src/app/jenn-about/jenn-about.component.html
@@ -1,5 +1,15 @@
-<div class="container-fluid z-depth-0">
-  <div class="row-1-lg">
-    <app-jenn-about-me></app-jenn-about-me>
+<div class="content z-depth-0">
+  <div class="wrapper">
+    <div class="row-1-lg mt-5">
+      <div class="about-card">
+        <app-jenn-about-me></app-jenn-about-me>
+      </div>
+      <div class="about-card ml-3-lg">
+        <app-jenn-about-work></app-jenn-about-work>
+      </div>
+      <div class="about-card ml-3-lg">
+        <app-jenn-about-work></app-jenn-about-work>
+      </div>
+    </div>
   </div>
 </div>
