--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mb-2">
     <div class="col">
       <p class="text-left">Data Intensive Computing Track</p>
     </div>
