--- a/src/app/jenn-about/jenn-about.component.scss
+++ b/src/app/jenn-about/jenn-about.component.scss
@@ -1,9 +1,16 @@
 @import "../../scss/variables";
-@import "../../scss/mixins";
+@import "../../scss/mixins";x
 
 .container-fluid {
+  background-color: $kinda-black;
   width: 100%;
   height: 100%;
+}
+
+.about-card {
+  float: left;
+  width: 100%;
+  overflow: hidden;
 }
 
 @import "../../scss/utilities";
