--- a/src/app/jenn-navbar/jenn-navbar.component.html
+++ b/src/app/jenn-navbar/jenn-navbar.component.html
@@ -1,4 +1,4 @@
-<navbar SideClass="container navbar navbar-toggleable-md navbar-light z-depth-0 fixed-top">
+<navbar SideClass="container navbar white navbar-toggleable-md navbar-light z-depth-0 fixed-top">
     <logo><a class="logo navbar-brand" href="#">{{title}}</a></logo>
     <links>
         <ul class="navbar-nav mr-auto">
