--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -1,76 +1,22 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <h1 class="text-right">me</h1>
+  <div class="row media">
+    <div class="col-lg">
+      <img class="mx-auto d-block rounded-circle z-depth-2 mt-4" src="../../../assets/IMG_0631.JPG">
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col">
-      <h2 class="text-left">Contact</h2>
-    </div>
-  </div>
+    <div class="col-lg">
+      <div class="row">
+        <div class="col mt-5">
+          <h1 class="text-center">Hi, I'm Jenn.</h1>
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col">
-      <p class="text-left">[Add links/social icons here]</p>
-    </div>
-  </div>
+      <div class="row">
+        <div class="col mt-2">
+          <h2 class="text-center">I'm an aspiring data scientist.</h2>
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col">
-      <h2 class="text-left">Education</h2>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <h3 class="text-left">Southern Methodist University</h3>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p class="text-left">Bobby B. Lyle School of Engineering</p>
-    </div>
-    <div class="col">
-      <p class="text-right">Expected Graduation: May 2019</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p class="text-left">Bachelor of Science in Computer Science</p>
-    </div>
-    <div class="col">
-      <p class="text-right">GPA: 3.56</p>
-    </div>
-  </div>
-
-  <div class="row mb-2">
-    <div class="col">
-      <p class="text-left">Data Intensive Computing Track</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p class="text-left">Master of Science in Computer Science</p>
-    </div>
-    <div class="col">
-      <p class="text-right">Expected Graduation: May 2019</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p class="text-left">Data Science Concentration</p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <h2 class="text-left">Things I Like</h2>
     </div>
   </div>
 
