--- a/src/app/jenn-about/jenn-about.component.scss
+++ b/src/app/jenn-about/jenn-about.component.scss
@@ -1,8 +1,7 @@
 @import "../../scss/variables";
 @import "../../scss/mixins";x
 
-.container-fluid {
-  background-color: $kinda-black;
+.wrapper {
   width: 100%;
   height: 100%;
 }
@@ -10,7 +9,6 @@
 .about-card {
   float: left;
   width: 100%;
-  overflow: hidden;
 }
 
 @import "../../scss/utilities";
