--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row media">
-    <div class="col-lg">
+    <div class="col-md">
       <img class="mx-auto d-block rounded-circle z-depth-2 mt-4" src="../../../assets/IMG_0631.JPG">
     </div>
 
-    <div class="col-lg">
+    <div class="col-md">
       <div class="row">
         <div class="col mt-5">
           <h1 class="text-center">Hi, I'm Jenn.</h1>
