--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,6 +39,7 @@ $about-p-line-height:   .25rem !default;
 
 $nav-top-padding:       .25rem !default;
 $nav-left-padding:      0 !default;
+$nav-height:            2.0625rem !default;
 
 $body-top-margin-sm:    2rem !default;
 $body-top-margin-lg:    6rem !default;
