--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 
 $white:                 #fff !default;
-$kinda-black:           #808080 !default;
+$kinda-black:           #3f3f3f !default;
 
 // Color Scheme
 $teal:                  #43c6ac !default;
