--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
-  <div class="row media">
+<div class="container-fluid mt-5">
+  <div class="row">
     <div class="col-md">
-      <img class="mx-auto d-block rounded-circle z-depth-2 mt-4" src="../../../assets/IMG_0631.JPG">
+      <img class="mx-auto d-block rounded-circle z-depth-2 mt-3" src="../../../assets/IMG_0631.JPG">
     </div>
 
     <div class="col-md">
