--- a/src/app/jenn-about/jenn-about.component.html
+++ b/src/app/jenn-about/jenn-about.component.html
@@ -1,13 +1,13 @@
 <div class="content z-depth-2">
   <div class="wrapper">
-    <div class="row-1-lg mt-5">
+    <div class="row-1-lg mt-md-5">
       <div class="about-card">
         <app-jenn-about-me></app-jenn-about-me>
       </div>
-      <div class="about-card ml-3-lg">
+      <div class="about-card ml-md-3 mt-md-4">
         <app-jenn-about-work></app-jenn-about-work>
       </div>
-      <div class="about-card ml-3-lg">
+      <div class="about-card ml-md-3 mt-md-4">
         <app-jenn-about-work></app-jenn-about-work>
       </div>
     </div>
