--- a/src/app/jenn-about/jenn-about.component.html
+++ b/src/app/jenn-about/jenn-about.component.html
@@ -2,7 +2,7 @@
   <div class="content z-depth-2 row">
     <div class="wrapper">
       <div class="row-1-lg mt-md-2">
-        <div class="about-card">
+        <div class="about-card ml-md-5">
           <app-jenn-about-me></app-jenn-about-me>
         </div>
         <div class="about-card ml-md-3 mt-md-4">
