closes #19 - finished footer

--- a/src/app/jenn-about/jenn-about.component.html
+++ b/src/app/jenn-about/jenn-about.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row footer-wrapper">
     <app-jenn-footer class="about-footer text-center"></app-jenn-footer>
   </div>
 </div>
