--- a/src/app/jenn-footer/jenn-footer.component.html
+++ b/src/app/jenn-footer/jenn-footer.component.html
@@ -1,3 +1,16 @@
 <div class="container footer-content">
-  <p> Testing footer position </p>
+  <div class="text-center">
+    <h5>contact me</h5>
+  </div>
+  <div class="container mx-auto mt-3">
+    <a href="https://github.com/Thakugan" target="_blank" class="col">
+      <img src="../../assets/social-icons/social-1_logo-github.svg"/>
+    </a>
+    <a href="https://github.com/Thakugan" target="_blank" class="col">
+      <img src="../../assets/social-icons/social-1_logo-linkedin.svg"/>
+    </a>
+    <a href="mailto:jenn.thakugan@icloud.com" class="col">
+      <img src="../../assets/social-icons/email.svg"/>
+    </a>
+  </div>
 </div>
