--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -59,8 +59,10 @@ $pic-height:            15rem !default;
 $pic-padding-left:      10rem !default;
 
 $about-footer-height:   7rem !default;
-$about-footer-mobile-margin:     3rem !default;
+$about-footer-mobile-margin:     2rem !default;
 $about-footer-desktop-bottom:    3rem !default;
 $about-footer-desktop-bottom-min:   3rem !default;
+
+$social-icon-size:      1.5rem !default;
 
 // Accordian
