Fixed linkedin link

--- a/src/app/jenn-footer/jenn-footer.component.html
+++ b/src/app/jenn-footer/jenn-footer.component.html
@@ -6,7 +6,7 @@
     <a href="https://github.com/Thakugan" target="_blank" class="col">
       <img src="../../assets/social-icons/social-1_logo-github.svg"/>
     </a>
-    <a href="https://github.com/Thakugan" target="_blank" class="col">
+    <a href="https://www.linkedin.com/in/thakugan/" target="_blank" class="col">
       <img src="../../assets/social-icons/social-1_logo-linkedin.svg"/>
     </a>
     <a href="mailto:jenn.thakugan@icloud.com" class="col">
