Just some structural stuff

--- a/src/app/jenn-about/jenn-about-work/jenn-about-work.component.scss
+++ b/src/app/jenn-about/jenn-about-work/jenn-about-work.component.scss
@@ -21,4 +21,8 @@ p {
   line-height: $about-p-line-height;
 }
 
+.container {
+  padding: 0 $work-card-padding;
+}
+
 @import "../../../scss/utilities";
