Changed jumbotron gradient

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,7 @@ $turqoise-flow-2:       #267871 !default;
 
 $broken-hearts-1:       #d9a7c7 !default;
 $broken-hearts-2:       #fffcdc !default;
+$broken-hearts-3:       #f4e4d7 !default;
 
 $about-color-1:         $teal !default;
 $about-color-2:         $blue !default;
