--- a/src/app/jenn-projects/jenn-projects.component.html
+++ b/src/app/jenn-projects/jenn-projects.component.html
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <h1 class="display-3">Projects</h1>
     <p>
-      Here is an overview of the personal and school projects I've done so far.
+      These are the personal and school projects I've done so far.
     </p>
     <hr class="my-4">
   </div>
