--- a/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
+++ b/src/app/jenn-about/jenn-about-me/jenn-about-me.component.html
@@ -16,6 +16,11 @@
           <h2 class="text-center">I'm an aspiring data scientist.</h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col mt-2">
+          <p class="text-center">Currently, I'm recreating my website in React cause I'm sick of working with Angular</p>
+        </div>
+      </div>
 
     </div>
   </div>
