--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -2,12 +2,12 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
 body {
-  margin: 0;
   padding: 0;
+  margin: 0;
   font-family: sans-serif;
 }
