--- a/src/jenn-styles.css
+++ b/src/jenn-styles.css
@@ -15,3 +15,12 @@ body {
   margin: 0;
   font-family: sans-serif;
 }
+
+.anim-appear {
+  opacity: 0.01;
+}
+
+.anim-appear.anim-appear-active {
+  opacity: 2;
+  transition: opacity 1.5s ease-in;
+}
