--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,13 +6,13 @@
 }
 
 .header {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .contact {
   color: #FFF;
   font-family: 'Roboto', sans-serif;
-  padding-top: 10%;
+  padding-top: 20%;
   padding-bottom: 5rem;
   opacity: .7;
 }
