--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,3 +1,13 @@
 .dropdown-item:hover {
   background-color: rgba(0, 0, 0, 0);
 }
+
+a {
+  background: none;
+  border: none;
+}
+
+.material-icons.md-light {
+  color: rgba(255, 255, 255, .7);
+  font-size: 36px;
+}
