--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,29 +1,24 @@
-.main {
-  color: #FFF;
+/* Main about page */
+
+.about .main {
   font-family: 'Roboto', sans-serif;
   padding-top: 10%;
-  opacity: .7;
 }
 
-.header {
+.about .header {
   font-family: 'Montserrat', sans-serif;
 }
 
-.contact {
-  color: #FFF;
+.about .contact {
   font-family: 'Roboto', sans-serif;
   padding-top: 20%;
   padding-bottom: 5rem;
-  opacity: .7;
 }
 
-.social-icon {
-  color: white;
+.about .social-icon {
+  max-height: 1.5rem;
+}
+
+.about .social-icon:hover {
   max-height: 2rem;
-}
-
-.wrapper {
-  background-color: rgba(27, 27, 34, 0.85);
-  height: 65vh;
-  width: 100%;
 }
