--- a/src/styles/FrameButton.css
+++ b/src/styles/FrameButton.css
@@ -10,7 +10,7 @@
 }
 
 .frame-btn__text {
-  color: #fff;
+  color: #000;
   font-weight: bold;
   text-transform: uppercase;
   transition: 300ms ease;
@@ -18,7 +18,7 @@
 }
 
 .frame-btn:hover .frame-btn__text {
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
@@ -27,7 +27,7 @@
   top: 0;
   left: 0;
   margin: 10px;
-  background-color: #fff;
+  background-color: #000;
   width: calc(100% - (5px * 4));
   height: calc(100% - (5px * 4));
   transform-origin: 50%;
@@ -117,7 +117,7 @@
   content: '';
   display: block;
   position: absolute;
-  background-color: #fff;
+  background-color: #000;
   transition: 800ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
