--- a/src/styles/Page.css
+++ b/src/styles/Page.css
@@ -1,21 +1,25 @@
 .page {
   border-radius: .5rem;
-  background-color: rgba(0, 0, 0, .5);
-  color: white;
+  color: black;
   font-family: 'Roboto', sans-serif;
-  width: 50%;
+  /* width: 50%; */
   padding: 2rem 1rem;
 }
 
-a {
+.page a {
   margin-right: 1rem;
 }
 
-a:hover {
+.page a:hover {
   cursor: pointer;
 }
 
-h1, h2, h3, h4, h5 {
+.page h1, .page h2, .page h3, .page h4, .page h5 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+}
+
+.page .material-icons {
+  font-size: 2rem;
+  color: black;
 }
