--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,18 +1,23 @@
 /* Main about page */
 
 .about .main {
+  padding-top: 10vh;
   font-family: 'Roboto', sans-serif;
-  padding-top: 10%;
 }
 
 .about .header {
   font-family: 'Montserrat', sans-serif;
+  font-size: 4rem;
+}
+
+.about .menu {
+  padding: 0 2rem;
 }
 
 .about .contact {
   font-family: 'Roboto', sans-serif;
-  padding-top: 20%;
-  padding-bottom: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 4rem;
 }
 
 .about .social-icon {
@@ -21,4 +26,14 @@
 
 .about .social-icon:hover {
   max-height: 2rem;
+}
+
+@media (min-width: 768px) {
+  .about .main {
+    padding-top: 20vh;
+  }
+  .about .contact {
+    padding-top: 20vh;
+    padding-bottom: 4rem;
+  }
 }
