--- a/src/styles/JupyterNotebook.css
+++ b/src/styles/JupyterNotebook.css
@@ -1,53 +1,23 @@
 .jupyter {
-  border: .0625rem solid #eaecee;
   background-color: #fff;
   min-height: 400px;
-  margin: 1rem .5rem;
-  padding-top: .5rem;
+  padding-top: 1rem;
+  overflow:
 }
 
 .jupyter .markdown-cell, .jupyter .code-cell {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 200;
-  font-size: .75rem;
 }
 
 .jupyter-default pre, .jupyter-default code {
-  font-size: .75rem;
+  font-size: 1em;
+  line-height: 1.25em;
 }
 
 .jupyter .output::after {
   border: none;
   background-color: none;
-}
-
-.jupyter h1, .jupyter h2, .jupyter h3, .jupyter h4, .jupyter h5, .jupyter h6 {
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: 400;
-}
-
-.jupyter h1 {
-  font-size: 1.5rem
-}
-
-.jupyter h2 {
-  font-size: 1.375rem
-}
-
-.jupyter h3 {
-  font-size: 1.25rem
-}
-
-.jupyter h4 {
-  font-size: 1.125rem
-}
-
-.jupyter h5 {
-  font-size: 1rem
-}
-
-.jupyter h6 {
-  font-size: .875rem
 }
 
 .jupyter .close {
@@ -67,45 +37,13 @@
   opacity: 0;
 }
 
-
-/* @media screen and (max-width: 600px) {
-  .post {
-    padding: 15px 15px;
-  }
-} */
-
 @media (min-width: 768px) {
   .jupyter {
-    margin: 2rem 10%;
-    padding: 2rem 3rem 2rem 5.5rem;
+    margin: 2rem 10vw;
+    padding: 2rem 3rem 2rem 6rem;
+    border: .0625rem solid #eaecee;
   }
   .jupyter .input::before, .jupyter .output::before {
     opacity: 1;
-  }
-  .jupyter .markdown-cell, .jupyter .code-cell {
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: 200;
-    font-size: 1rem;
-  }
-  .jupyter-default pre, .jupyter-default code {
-    font-size: 1rem;
-  }
-  .jupyter h1 {
-    font-size: 2rem
-  }
-  .jupyter h2 {
-    font-size: 1.825rem
-  }
-  .jupyter h3 {
-    font-size: 1.75rem
-  }
-  .jupyter h4 {
-    font-size: 1.5rem
-  }
-  .jupyter h5 {
-    font-size: 1.25rem
-  }
-  .jupyter h6 {
-    font-size: 1.125rem
   }
 }
