--- a/src/styles/JupyterNotebook.css
+++ b/src/styles/JupyterNotebook.css
@@ -39,11 +39,19 @@
 
 @media (min-width: 768px) {
   .jupyter {
-    margin: 2rem 10vw;
+    margin: 1rem;
     padding: 2rem 3rem 2rem 6rem;
     border: .0625rem solid #eaecee;
   }
   .jupyter .input::before, .jupyter .output::before {
     opacity: 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  .jupyter {
+    margin: 2rem 10vw;
+    padding: 2rem 3rem 2rem 6rem;
+    border: .0625rem solid #eaecee;
   }
 }
