--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -3,7 +3,7 @@
   text-decoration: underline;
 }
 
-.projects .datasci h2, .projects .compsci h2 {
+.projects h2 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 300;
   position: relative;
@@ -12,32 +12,7 @@
   color: white;
 }
 
-.projects .ds-menu, .projects .cs-menu {
-  height: 50vh;
-}
-
-.projects .menu-content {
-  overflow: scroll;
-  overflow-x: hidden;
-  height: 50vh;
-}
-
 .projects a:hover {
-  cursor: pointer;
-}
-
-.projects .menu-buttons {
-  margin-top: 2rem;
-}
-
-.projects .datasci, .projects .compsci {
-  height: 10rem;
-  margin-bottom: 1rem;
-  overflow: hidden;
-  background-color: black;
-}
-
-.projects .datasci:hover, .projects .compsci:hover {
   cursor: pointer;
 }
 
@@ -48,28 +23,5 @@
   .projects p {
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 200;
-  }
-  .projects .menu-buttons {
-    margin-top: 5vh;
-  }
-  .projects .datasci, .projects .compsci {
-    height: 55vh;
-    padding: 1rem;
-  }
-  .projects .datasci {
-    margin-right: .5rem;
-  }
-  .projects .compsci {
-    margin-left: .5rem;
-  }
-  .projects .ds-menu, .projects .cs-menu {
-    height: 55vh;
-    padding: 1rem;
-  }
-  .projects .ds-menu {
-    margin-left: .5rem;
-  }
-  .projects .cs-menu {
-    margin-right: .5rem;
   }
 }
