--- a/src/scss/jennle.scss
+++ b/src/scss/jennle.scss
@@ -1,7 +1,9 @@
 @import 'variables';
 @import 'reboot';
 @import 'header';
+@import 'landing';
 
 // Make sure it's at the bottom
 @import 'mixins';
+@import 'typography';
 @import 'utilities';
