--- a/src/scss/utilities/_media.scss
+++ b/src/scss/utilities/_media.scss
@@ -8,17 +8,8 @@
 
 // Medium
 @media (min-width: 768px) {
-  .header {
-    h1,
-    h4 {
-      display: inline;
-      margin: auto 0.5rem;
-      vertical-align: middle;
-    }
-
-    h1 {
-      margin-right: 1rem;
-    }
+  .page {
+    padding: 1rem 0 0 0;
   }
 }
 
