--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -75,9 +75,10 @@
 
 @media (min-width: 768px) {
   .header {
-    padding: 2rem 2rem 1rem 2rem;
+    border: 0.15rem solid $dark-red;
+    padding: 2rem 2rem 2rem 2rem;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 1rem auto 0 auto;
     position: relative;
 
     div {
@@ -94,10 +95,6 @@
 
     .name {
       float: left;
-    }
-
-    a {
-      color: $black;
     }
 
     h1 {
